# cs-biu-courses

./: README.md
ap1-course-2017/: CMakeLists.txt  README.md  details.txt  log_usage.txt  makefile
ap1-course-2017/Tests/: BfsTest.cpp  DriverFactoryTest.cpp  DriverTest.cpp  GraphNodeTest.cpp  MapTest.cpp  PointTest.cpp  TaxiCenterTest.cpp  TaxiFactoryTest.cpp  TripInfoFactoryTest.cpp  TripInfoTest.cpp  TripTest.cpp  VehicleTest.cpp  tests_main.cpp
ap1-course-2017/lib/googletest-master/: README.md
ap1-course-2017/lib/googletest-master/googlemock/: CMakeLists.txt  README.md  configure.ac
ap1-course-2017/lib/googletest-master/googlemock/docs/: CookBook.md  DevGuide.md  Documentation.md  ForDummies.md  FrequentlyAskedQuestions.md
ap1-course-2017/lib/googletest-master/googlemock/docs/v1_5/: CookBook.md  Documentation.md  ForDummies.md  FrequentlyAskedQuestions.md
ap1-course-2017/lib/googletest-master/googlemock/docs/v1_6/: CookBook.md  Documentation.md  ForDummies.md  FrequentlyAskedQuestions.md
ap1-course-2017/lib/googletest-master/googlemock/docs/v1_7/: CookBook.md  Documentation.md  ForDummies.md  FrequentlyAskedQuestions.md
ap1-course-2017/lib/googletest-master/googlemock/make/: Makefile
ap1-course-2017/lib/googletest-master/googlemock/scripts/generator/: README.cppclean
ap1-course-2017/lib/googletest-master/googletest/: README.md
ap1-course-2017/lib/googletest-master/googletest/cmake/: internal_utils.cmake
ap1-course-2017/lib/googletest-master/googletest/docs/: AdvancedGuide.md  DevGuide.md  FAQ.md  Primer.md  V1_5_AdvancedGuide.md  V1_5_FAQ.md  V1_5_Primer.md  V1_5_PumpManual.md  V1_6_AdvancedGuide.md  V1_6_FAQ.md  V1_6_Primer.md  V1_7_AdvancedGuide.md  V1_7_FAQ.md  V1_7_Primer.md  V1_7_PumpManual.md  XcodeGuide.md
ap1-course-2017/lib/googletest-master/googletest/m4/: acx_pthread.m4
ap1-course-2017/lib/googletest-master/googletest/make/: Makefile
ap1-course-2017/lib/googletest-master/googletest/scripts/test/: Makefile
ap1-course-2017/lib/googletest-master/googletest/xcode/Scripts/: runtests.sh
ap1-course-2017/src/Client/: Client.cpp  Client.h  client_main.cpp
ap1-course-2017/src/Core/: Map.cpp  Map.h  Point.cpp  Point.h  SynchronizedQueue.h
ap1-course-2017/src/Core/Connection/: Command.h  Communicable.cpp  Communicable.h  Message.h
ap1-course-2017/src/Core/Entities/: Driver.cpp  Driver.h
ap1-course-2017/src/Core/Threading/: PoolWorkerThread.cpp  PoolWorkerThread.h  Task.h  Thread.cpp  Thread.h  ThreadPool.cpp  ThreadPool.h  WorkQueue.h
ap1-course-2017/src/Core/Trip/: Trip.cpp  Trip.h  TripEndedListener.h  TripEndedNotifier.cpp  TripEndedNotifier.h  TripInfo.cpp  TripInfo.h
ap1-course-2017/src/Core/Vehicles/: Taxi.cpp  Taxi.h  Vehicle.cpp  Vehicle.h
ap1-course-2017/src/Server/: DriverQueue.cpp  DriverQueue.h  MessageQueue.h  Server.cpp  Server.h  server_main.cpp
ap1-course-2017/src/Server/Tasks/: CalculatePathTask.cpp  CalculatePathTask.h  ClientTask.cpp  ClientTask.h
ap1-course-2017/src/Server/TaxiCenter/: DriverDatabase.cpp  DriverDatabase.h  DriverInfo.h  PathCalculation.cpp  PathCalculation.h  TaxiCenter.cpp  TaxiCenter.h
ap1-course-2017/src/Util/: DriverInput.h  InputParser.cpp  InputParser.h
ap1-course-2017/src/Util/Factories/: DriverFactory.cpp  DriverFactory.h  TaxiFactory.cpp  TaxiFactory.h  TripInfoFactory.cpp  TripInfoFactory.h
ap1-course-2017/src/Util/Graph/: BFS.cpp  BFS.h  GraphAlgorithm.h  GraphNode.h
ap1-course-2017/src/Util/Serialization/: Serialization.h
ap2-course-2017/: AP2.sln  graph.txt
ea-course-2018/: EA1.py  EA2.py  README.md
(+238 files in other folders)
